@startuml fig_3_5_class_diagram_dao
skinparam classAttributeIconSize 0

package "it.unifi.escapemanager.dao" #F0F4C3 {
    interface DAOFactory <<interface>> {
        + {static} getDAOFactory() : DAOFactory
        + getStanzaDAO() : StanzaDAO
        + getPrenotazioneDAO() : PrenotazioneDAO
        + getWaitingListDAO() : WaitingListDAO
    }
    
    class PostgresDAOFactory implements DAOFactory {
        + getStanzaDAO() : StanzaDAO
        + getPrenotazioneDAO() : PrenotazioneDAO
        + getWaitingListDAO() : WaitingListDAO
    }

    interface GenericDAO <<interface>>
    interface StanzaDAO <<interface>>
    interface PrenotazioneDAO <<interface>>
    interface WaitingListDAO <<interface>>
    class ConnectionManager <<Singleton>>

    class StanzaDAOPostgres implements StanzaDAO {
        + save(stanza: Stanza) : void
        + findById(id: String) : Stanza
        + update(stanza: Stanza) : void
    }
    
    class PrenotazioneDAOPostgres implements PrenotazioneDAO
    class WaitingListDAOPostgres implements WaitingListDAO

    DAOFactory .down.> StanzaDAO : <<creates>>
    DAOFactory .down.> PrenotazioneDAO : <<creates>>
    DAOFactory .down.> WaitingListDAO : <<creates>>
    
    PostgresDAOFactory .down.> StanzaDAOPostgres : <<creates>>
    PostgresDAOFactory .down.> PrenotazioneDAOPostgres : <<creates>>
    PostgresDAOFactory .down.> WaitingListDAOPostgres : <<creates>>

    StanzaDAO --|> GenericDAO
    PrenotazioneDAO --|> GenericDAO

    StanzaDAOPostgres ..> ConnectionManager : <<usa>>
    PrenotazioneDAOPostgres ..> ConnectionManager : <<usa>>
    WaitingListDAOPostgres ..> ConnectionManager : <<usa>>
}
@enduml
